Add comprehensive UI improvements: glassmorphism, animations, and visual enhancements
- Add glassmorphism effects to cards with enhanced backdrop blur
- Implement gradient text effects on key headings with animations
- Enhance button hover states with scale transforms and shimmer effects
- Add subtle grid pattern overlays to sections
- Improve scroll progress bar with gradient and glow
- Add active section indicator line in navigation
- Enhance form inputs with glassmorphism and focus animations
- Add success animations to form submissions
- Improve pricing card with shimmer effects and hover elevation
- Enhance FAQ accordion with smooth icon rotation
- Add social media links to footer
- Apply consistent hover effects across all interactive elements
- Improve visual hierarchy and spacing

--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
+    "framer-motion": "^11.3.19",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.555.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.3.19"
+    "react-particles": "^2.12.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
@@ -25,4 +31,3 @@
     "typescript": "^5.5.4"
   }
 }
-
