--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,30 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "out",
-  "framework": null,
+  "framework": "nextjs",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
     }
   ]
 }
